solicitud bug
