# PawApi/Controllers/DTOs/UsuarioDto.cs
@@ -10,6 +10,10 @@ namespace PawApi.Controllers.DTOs
         public int Id { get; set; }
         public string Usuario1 { get; set; }
         public string Contraseña { get; set; }
+        public string Correo { get; set; }
+        public string Legajo { get; set; }
+        public DateTime? FechaDeCreacion { get; set; }
+        public int? EstadoId { get; set; }
 
     }
 }
