# PawApi/Models/Solicitud.cs
@@ -14,6 +14,7 @@ namespace PawApi.Models
 
         public int Id { get; set; }
         public int? CuidadorId { get; set; }
+        public int? UsuarioId { get; set; }
         public string Peticion { get; set; }
         public DateTime? FechaSolicitud { get; set; }
         public DateTime? FechaAprobacion { get; set; }
@@ -22,6 +23,7 @@ namespace PawApi.Models
         public string Observaciones { get; set; }
         public string MotivoRechazo { get; set; }
         public virtual Cuidador Cuidador { get; set; }
+        public virtual Usuario Usuario { get; set; }
         public virtual ICollection<FotoSolicitud> FotoSolicituds { get; set; }
     }
 }
